[gd_scene load_steps=9 format=3 uid="uid://dx70qij8582db"]

[ext_resource type="Script" path="res://Scripts/map_4p.gd" id="1_8lsff"]
[ext_resource type="PackedScene" uid="uid://btb5rxmja8oc8" path="res://Scenes/player.tscn" id="2_7n5fc"]
[ext_resource type="Texture2D" uid="uid://ck0fv8x87x1tk" path="res://Sprites/StageBlocks.png" id="3_po3m7"]
[ext_resource type="Texture2D" uid="uid://bu3m2k4vhv2c3" path="res://Sprites/Timer - Sprite.png" id="4_5nl8v"]
[ext_resource type="Texture2D" uid="uid://c3yjav33673je" path="res://Sprites/Clock - Sprite.png" id="5_u1qqo"]
[ext_resource type="Texture2D" uid="uid://ddhix4r73futy" path="res://Sprites/Players - Board.png" id="6_g0drh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oo2pr"]
texture = ExtResource("3_po3m7")
0:0/0 = 0
0:0/0/custom_data_1 = true
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_jtcqd"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "breakable"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_oo2pr")

[node name="Map_4P" type="Node2D"]
script = ExtResource("1_8lsff")
player_scene = ExtResource("2_7n5fc")
RedClr = Color(1, 0, 0, 1)
OrigClr = Color(1, 1, 1, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jtcqd")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131072, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 655360, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 786446, 131072, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 65550, 131072, 0, 131086, 131072, 0, 196622, 131072, 0, 262158, 131072, 0, 327694, 131072, 0, 393230, 131072, 0, 458766, 131072, 0, 524302, 131072, 0, 589838, 131072, 0, 655374, 131072, 0, 720910, 131072, 0, 65537, 196608, 0, 131073, 196608, 0, 196609, 196608, 0, 262145, 196608, 0, 327681, 196608, 0, 393217, 196608, 0, 458753, 196608, 0, 524289, 196608, 0, 589825, 196608, 0, 655361, 196608, 0, 720897, 196608, 0, 65538, 196608, 0, 131074, 65536, 0, 196610, 196608, 0, 262146, 65536, 0, 327682, 196608, 0, 393218, 65536, 0, 458754, 196608, 0, 524290, 65536, 0, 589826, 196608, 0, 655362, 65536, 0, 720898, 196608, 0, 65539, 196608, 0, 131075, 196608, 0, 196611, 196608, 0, 262147, 196608, 0, 327683, 196608, 0, 393219, 196608, 0, 458755, 196608, 0, 524291, 196608, 0, 589827, 196608, 0, 655363, 196608, 0, 720899, 196608, 0, 65540, 196608, 0, 131076, 65536, 0, 196612, 196608, 0, 262148, 65536, 0, 327684, 196608, 0, 393220, 65536, 0, 458756, 196608, 0, 524292, 65536, 0, 589828, 196608, 0, 655364, 65536, 0, 720900, 196608, 0, 65541, 196608, 0, 131077, 196608, 0, 196613, 196608, 0, 262149, 196608, 0, 327685, 196608, 0, 393221, 196608, 0, 458757, 196608, 0, 524293, 196608, 0, 589829, 196608, 0, 655365, 196608, 0, 720901, 196608, 0, 65542, 196608, 0, 131078, 65536, 0, 196614, 196608, 0, 262150, 65536, 0, 327686, 196608, 0, 393222, 65536, 0, 458758, 196608, 0, 524294, 65536, 0, 589830, 196608, 0, 655366, 65536, 0, 720902, 196608, 0, 65543, 196608, 0, 131079, 196608, 0, 196615, 196608, 0, 262151, 196608, 0, 327687, 196608, 0, 393223, 196608, 0, 458759, 196608, 0, 524295, 196608, 0, 589831, 196608, 0, 655367, 196608, 0, 720903, 196608, 0, 65544, 196608, 0, 131080, 65536, 0, 196616, 196608, 0, 262152, 65536, 0, 327688, 196608, 0, 393224, 65536, 0, 458760, 196608, 0, 524296, 65536, 0, 589832, 196608, 0, 655368, 65536, 0, 720904, 196608, 0, 65545, 196608, 0, 131081, 196608, 0, 196617, 196608, 0, 262153, 196608, 0, 327689, 196608, 0, 393225, 196608, 0, 458761, 196608, 0, 524297, 196608, 0, 589833, 196608, 0, 655369, 196608, 0, 720905, 196608, 0, 65546, 196608, 0, 131082, 65536, 0, 196618, 196608, 0, 262154, 65536, 0, 327690, 196608, 0, 393226, 65536, 0, 458762, 196608, 0, 524298, 65536, 0, 589834, 196608, 0, 655370, 65536, 0, 720906, 196608, 0, 65547, 196608, 0, 131083, 196608, 0, 196619, 196608, 0, 262155, 196608, 0, 327691, 196608, 0, 393227, 196608, 0, 458763, 196608, 0, 524299, 196608, 0, 589835, 196608, 0, 655371, 196608, 0, 720907, 196608, 0, 65548, 196608, 0, 131084, 65536, 0, 196620, 196608, 0, 262156, 65536, 0, 327692, 196608, 0, 393228, 65536, 0, 458764, 196608, 0, 524300, 65536, 0, 589836, 196608, 0, 655372, 65536, 0, 720908, 196608, 0, 65549, 196608, 0, 131085, 196608, 0, 196621, 196608, 0, 262157, 196608, 0, 327693, 196608, 0, 393229, 196608, 0, 458765, 196608, 0, 524301, 196608, 0, 589837, 196608, 0, 655373, 196608, 0, 720909, 196608, 0, 786433, 196608, 0, 786434, 65536, 0, 786435, 196608, 0, 786436, 65536, 0, 786437, 196608, 0, 786438, 65536, 0, 786439, 196608, 0, 786440, 65536, 0, 786441, 196608, 0, 786442, 65536, 0, 786443, 196608, 0, 786444, 65536, 0, 786445, 196608, 0, 851969, 196608, 0, 851970, 196608, 0, 851971, 196608, 0, 851972, 196608, 0, 851973, 196608, 0, 851974, 196608, 0, 851975, 196608, 0, 851976, 196608, 0, 851977, 196608, 0, 851978, 196608, 0, 851979, 196608, 0, 851980, 196608, 0, 851981, 196608, 0, 851982, 131072, 0, 917518, 131072, 0, 917517, 131072, 0, 917516, 131072, 0, 917515, 131072, 0, 917514, 131072, 0, 917513, 131072, 0, 917512, 131072, 0, 917511, 131072, 0, 917510, 131072, 0, 917509, 131072, 0, 917508, 131072, 0, 917507, 131072, 0, 917506, 131072, 0, 917505, 131072, 0, 917504, 131072, 0, 851968, 131072, 0)
layer_1/tile_data = PackedInt32Array()

[node name="MapManager" type="Node" parent="."]

[node name="PlayerManager" type="Node" parent="."]

[node name="BombManager" type="Node" parent="."]

[node name="PowerUpManager" type="Node" parent="."]

[node name="Board" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Board"]
position = Vector2(264, 112)
scale = Vector2(1, 1.00591)
texture = ExtResource("4_5nl8v")

[node name="Timer" type="Timer" parent="Board"]
wait_time = 300.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="Board"]
offset_left = 248.0
offset_right = 288.0
offset_bottom = 32.0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/TimerLabel"]
position = Vector2(0, 16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_u1qqo")

[node name="P1" type="Label" parent="Board"]
visible = false
offset_left = 248.0
offset_top = 32.0
offset_right = 280.0
offset_bottom = 64.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P1"]
position = Vector2(8, 16)
texture = ExtResource("6_g0drh")
hframes = 6

[node name="P2" type="Label" parent="Board"]
visible = false
offset_left = 248.0
offset_top = 64.0
offset_right = 280.0
offset_bottom = 96.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P2"]
position = Vector2(8, 16)
texture = ExtResource("6_g0drh")
hframes = 6
frame = 1

[node name="P3" type="Label" parent="Board"]
visible = false
offset_left = 248.0
offset_top = 96.0
offset_right = 280.0
offset_bottom = 128.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P3"]
position = Vector2(8, 16)
texture = ExtResource("6_g0drh")
hframes = 6
frame = 2

[node name="P4" type="Label" parent="Board"]
visible = false
offset_left = 248.0
offset_top = 128.0
offset_right = 280.0
offset_bottom = 160.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P4"]
position = Vector2(8, 16)
texture = ExtResource("6_g0drh")
hframes = 6
frame = 3

[node name="P5" type="Label" parent="Board"]
visible = false
offset_left = 248.0
offset_top = 160.0
offset_right = 280.0
offset_bottom = 192.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P5"]
position = Vector2(8, 16)
texture = ExtResource("6_g0drh")
hframes = 6
frame = 4

[node name="P6" type="Label" parent="Board"]
visible = false
offset_left = 248.0
offset_top = 192.0
offset_right = 280.0
offset_bottom = 224.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Board/P6"]
position = Vector2(8, 16)
texture = ExtResource("6_g0drh")
hframes = 6
frame = 5

[node name="GameStart" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Board/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GameStart" to="." method="_on_game_start_timeout"]
